# memory_management_buffer

./: CMakeLists.txt  README.md  assignment.txt
SCS_test/: CMakeLists.txt  main.cpp
